<resources>
    <string name="system_name">module_system</string>
    <string name="system_tool">工具</string>
    <string name="system_share">分享邀请</string>
    <string name="system_question">常见问题</string>
    <string name="system_feedback">意见反馈</string>
    <string name="system_about_us">关于我们</string>
    <string name="system_fans_manager">粉丝管理</string>
    <string name="system_next">下一步</string>
    <string name="system_invite_friends">邀请好友</string>
    <string name="system_invite_code">邀请码%s</string>
    <string name="system_copy_invite_code">复制邀请码</string>
    <string name="system_sharing_friends">分享好友</string>
    <string name="system_upload_photo">上传照片</string>
    <string name="system_submit">提交</string>
    <string name="system_input_tips">请输入反馈内容</string>
    <string name="system_person_info">个人信息</string>
    <string name="system_company_info">公司信息</string>
    <string name="system_avatar">头像</string>
    <string name="system_real_name">真实姓名</string>
    <string name="system_id_card_number">身份证号码</string>
    <string name="system_id_card_photo">身份证照片</string>
    <string name="system_id_card_front_photo">身份证正面照片</string>
    <string name="system_id_card_reverse_photo">身份证反面照片</string>
    <string name="system_id_card_handheld_photo">身份证手持照片</string>
    <string name="system_submit_to_check">提交审核</string>
    <string name="system_company_logo">企业LOGO</string>
    <string name="system_company_name">企业名称</string>
    <string name="system_industry">所属行业</string>
    <string name="system_contact">联系人</string>
    <string name="system_position">职务</string>
    <string name="system_phone_number">手机号</string>
    <string name="system_unified_credit_code">统一信用代码</string>
    <string name="system_office_address">办公地址</string>
    <string name="system_business_license">营业执照</string>
    <string name="system_notification">消息通知</string>
    <string name="system_receive_message_notifications">接收消息通知</string>
    <string name="system_cash_withdrawal">收益提现</string>
    <string name="system_new_fan_reminder">新粉丝提醒</string>
    <string name="system_check_success">审核成功</string>
    <string name="system_check_success_tips">恭喜您，审核成功！</string>
    <string name="system_check_fail">审核失败</string>
    <string name="system_check_fail_tips">非常抱歉，审核失败了~</string>
    <string name="system_checking">审核中</string>
    <string name="system_checking_tips">我们将在48小时内进行审\n核，如若超时请联系客服!</string>
    <string name="system_member">会员</string>
    <string name="system_do_task">做任务</string>
    <string name="system_growth_value_introduction">成长值介绍</string>
    <string name="system_level_privilege_introduction">等级特权介绍</string>
    <string name="system_level">等级</string>
    <string name="system_growth_value">成长值</string>
    <string name="system_privilege">特权</string>
    <string name="system_silver">白银</string>
    <string name="system_gold">黄金</string>
    <string name="system_red_diamond">红钻</string>
    <string name="system_blue_diamond">蓝钻</string>
    <string name="system_black_diamond">黑钻</string>
    <string name="system_300">300</string>
    <string name="system_1600">1600</string>
    <string name="system_3500">3500</string>
    <string name="system_6000">6000</string>
    <string name="system_10000">10000</string>
    <string name="system_ellipsis">...</string>
    <string name="system_default_error">没有数据</string>
    <string name="system_feedback_input_hint">请输入你的建议吧</string>
    <string name="system_copy">复制</string>
</resources>
